src/styles/homepage.scss
@import 'base';
$spacing: 20px;

.homepage {
  .carousel {
    overflow: hidden;
    height: calc(41.85vw + 70px) !important;
    max-height: 606px;
    .slider-control-centerleft,
    .slider-control-centerright {
      margin-top: -30px;
      @include media('>=tablet') {
        // margin-top: 0;
      }
    }
    .slider-control-bottomcenter {
      // display: none;
      margin-bottom: -15px;
      @include media('>=tablet') {
        margin-bottom: 0px;
        display: block;
        bottom: -15px !important;
      }
    }
    .slider-frame {
      ul.slider-list {
        li.slider-slide {
          max-height: 536px;
        }
      }
    }
    .slide-image {
      height: 0;
      width: 100%;
      padding-bottom: 41.85%;
      @include media('>=wide') {
        height: 536px;
        padding-bottom: 0;
      }
      background-size: cover;
      background-position: center;
    }
    .slide-video {
      // height: 0;
      // width: 100%;
      // padding-bottom: 42%;
    }
    .left-controls,
    .right-controls {
      border-radius: 20px;
      width: 30px;
      height: 30px;
      border: 0;
      background-color: $white;
      color: $grey80;
      opacity: 0.7;
      font-size: 20px;
      line-height: 20px;
      font-weight: bold;
      &:hover {
        opacity: 1;
      }
    }
    .left-controls {
      margin-left: 20px;
      .left-controls-icon {
        position: absolute;
        top: 2.5px;
        left: 12px;
      }
    }
    .right-controls {
      margin-right: 20px;
      .right-controls-icon {
        position: absolute;
        top: 2.5px;
        right: 12px;
      }
    }
    .heading-container {
      width: 100%;
      max-width: 1280px;
      margin: 0 auto;
      position: relative;
      .heading {
        position: absolute;
        bottom: 0;
        padding: 55px 90px 20px;
        color: white;
        text-shadow: 1px 1px 0 $grey80, -1px -1px 0 $grey80, 1px -1px 0 $grey80, -1px 1px 0 $grey80,
          1px 1px 0 $grey80;
        @include media('>=tablet') {
          padding: 55px 90px 40px;
        }
        a {
          color: $white;
          text-decoration: none;
          position: relative;
          display: inline;
          font-size: 32px;
          font-weight: 700;
          line-height: normal;
          @include media('>=tablet') {
            font-size: 50px;
          }
          &:hover {
            p {
              display: inline=block;
              background-color: rgba(255, 255, 255, 0.3);
              &:before {
                content: '\00a0';
                width: 15px;
                left: -15px;
                display: inline-block;
                background-color: rgba(255, 255, 255, 0.3);
                position: absolute;
              }
              &:after {
                content: '\00a0';
                width: 15px;
                display: inline-block;
                background-color: rgba(255, 255, 255, 0.3);
                position: absolute;
              }
            }
          }
        }
      }
    }
    .description-container {
      width: 100%;
      background-color: $yellow-sea;
      height: 70px;
      display: flex;
      position: absolute;
      bottom: -70px;
      .description {
        width: 100%;
        max-width: 1280px;
        margin: 0 auto;
        color: $white;
        font-size: 18px;
        display: flex;
        align-items: center;
        line-height: 16px;
        padding-left: 10px;
        padding-right: 10px;
        @include media('>=tablet') {
          line-height: 24px;
          font-size: 24px;
          padding-left: 90px;
          padding-right: 90px;
          padding-bottom: 10px;
        }
        a {
          color: $white;
          text-decoration: none;
          &:hover {
            text-decoration: underline;
          }
        }

        p {
          margin-bottom: 0;
        }
      }
    }
    .video-container {
      height: 0;
      padding-bottom: 41.85%;
      overflow: hidden;
    }
  }
  .tagline-anchor {
    display: none;
    @include media('>=tablet') {
      display: block;
      position: absolute;
      width: 100%;
      pointer-events: none;
      top: calc(41.85vw - 67px);
      .tagline-container {
        display: flex;
        width: 100%;
        max-width: 1280px;
        margin: 0 auto;
        .tagline {
          display: flex;
          color: $white;
          background-color: rgba(0, 0, 0, 0.5);
          padding: 55px 90px 40px;
          font-size: 50px;
          letter-spacing: 2px;
        }
      }
    }
    @include media('>=wide') {
      top: 476px;
    }
  }

  .heading1-container {
    width: 100%;
    background-color: $yellow-sea;
    height: 50px;
    display: flex;
    .heading1 {
      width: 100%;
      max-width: 1280px;
      margin: 0 auto;
      padding-left: 90px;
      color: $white;
      font-size: 24px;
      display: flex;
      align-items: center;
      line-height: 24px;
      p {
        margin-bottom: 0;
      }
    }
  }

  .no-bleed-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto 40px;
    padding-left: 10px;
    padding-right: 10px;
    @include media('>=tablet') {
      padding-left: 0;
      padding-right: 0;
    }
  }

  .tile-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
  }

  .heading2-container {
    display: flex;
    width: 100%;
    margin: 40px auto 35px;
    background-color: $blue;
    height: 50px;
    .heading2 {
      width: 100%;
      max-width: 1280px;
      margin: 0 auto;
      padding-left: 20px;
      color: $white;
      font-size: 18px;
      line-height: 18px;
      display: flex;
      align-items: center;
      @include media('>=tablet') {
        padding-left: 90px;
        font-size: 24px;
        line-height: 24px;
      }
      p {
        margin-bottom: 0;
      }
    }
  }
  .event-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    margin: 0 auto 20px;
    .event1,
    .event2 {
      width: 100%;
      height: 390px;
      background-size: cover;
      background-position: center center;
      @include media('>=tablet') {
        width: calc(50% - (#{$spacing} / 2));
      }
      @include media('>=desktop') {
        width: calc(25% - #{$spacing} * 0.75);
      }
      .content-container {
        padding-top: 40px;
        padding-left: 20px;
        padding-right: 15px;
        padding-bottom: 10px;
        color: $white;
        position: relative;
        height: 100%;
        overflow: hidden;
        @include media('>=tablet') {
          padding-top: 20px;
        }
        .event-background {
          background-position: center center;
          background-size: cover;
        }
        .event-background,
        .event-overlay-blue,
        .event-overlay-gold {
          z-index: -1;
        }
        .event-background,
        .event-overlay-blue,
        .event-overlay-gold {
          padding-bottom: 100%;
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          transition: $easeinout;
        }
        .event-overlay-blue {
          background-color: $blue;
        }
        .event-overlay-gold {
          background-color: $yellow-sea;
        }
        .event-overlay-blue,
        .event-overlay-gold {
          opacity: 0.6;
          @include media('>=tablet') {
            opacity: 1;
          }
        }
        &:hover {
          .event-overlay-blue,
          .event-overlay-gold {
            opacity: 0.6;
          }
        }
      }
    }
    .event1 {
      margin-bottom: $spacing;
      @include media('>=tablet') {
        margin-right: $spacing;
        margin-bottom: 0;
      }
      @include media('>=desktop') {
        margin-right: $spacing;
      }
    }
    .event2 {
      @include media('>=desktop') {
        margin-right: $spacing;
      }
    }
    .event3 {
      width: 100%;
      height: 390px;
      position: relative;
      background-color: $white;
      background-position: center center;
      background-size: cover;
      margin-top: $spacing;
      @include media('>=desktop') {
        width: calc(50% - #{$spacing} / 2);
        margin-top: 0;
      }
      .content-container {
        width: 100%;
        height: 100%;
        position: absolute;
        right: 0;
        background-color: rgba(255, 255, 255, 0.8);
        padding: 40px 15px 20px 20px;
        @include media('>=tablet') {
          width: 40%;
          padding-top: 20px;
        }
        @include media('>=desktop') {
          width: 60%;
        }
      }
    }
    .content-container {
      .title {
        font-weight: bold;
        font-size: 22px;
        line-height: initial;
      }
      .description {
        font-size: 18px;
        line-height: normal;
        li {
          margin-bottom: 0;
        }
      }
      a.event-more {
        background-color: $grey80;
        border: 0;
        display: inline-flex;
        align-content: center;
        height: 36px;
        color: $white;
        padding-left: 15px;
        padding-right: 15px;
        text-decoration: none;
        &:hover {
          background-color: $grey60;
        }
        transition: $easeinout;
      }
    }
  }
}

